# My_first_rusty_game

./: Cargo.toml
assets/: map.txt
src/: ascii.rs  debug.rs  dialog.rs  fadeout.rs  grass.rs  main.rs  player.rs  tilemap.rs
